syntax = "proto3";

option go_package = "server/dbpeerconnector/peergrpc";

service PeerService {
  rpc HealthCheck(Ping) returns (Pong) {}
  rpc SubscribeReplica(SubscribeReplicaRequest) returns (stream ReplicaUpdate) {}
}

message Ping {}

message Pong {}

message SubscribeReplicaRequest {
  string advertisedAddress = 1;
}

message ReplicaUpdate {
  string key = 1;
  string value = 2;
}
